--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="博客，碎碎念，和小工具"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,10 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>月桂树</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>显然，你没有允许JavaScript的运行。</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
