--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="博客，碎碎念，和小工具"
+      content="博客, 碎碎念, bilibili封面提取工具, 数制转换器"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <noscript>显然，你没有允许JavaScript的运行。</noscript>
+    <noscript>显然，你没有允许JavaScript的运行，而这个网站是通过react构建的。</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
